# research_workbench

./: .gitignore  AGENTS.md  README.md  explore.ipynb  main.py  pyproject.toml
backend/: README.md  mock_service.py  server.py
examples/: deep_research_system_benchmarks.md
frontend/: README.md  components.json  package-lock.json  package.json
frontend/api/: dependencies.py  main.py
frontend/src/: App.tsx  index.css
frontend/src/components/canvas/: GraphCanvas.tsx  layout.ts
frontend/src/components/node/: AgentNodeCard.tsx  MessageBubble.tsx
frontend/src/components/tools/: ToolCallBubble.tsx  ToolCallDetailsPanel.tsx
frontend/src/components/ui/: ChatBar.tsx  Modal.tsx
frontend/src/components/views/: FocusView.tsx  ResearchView.tsx
frontend/src/services/events/: SseClient.ts  fixtures.ts
frontend/src/state/: reducers.ts  selectors.ts  store.ts
frontend/src/types/: events.ts  graph.ts
frontend/web/: README.md  package-lock.json  package.json
frontend/web/app/: globals.css  page.tsx
frontend/web/components/: AgentNode.tsx  ResearchCanvas.tsx
frontend/web/components/canvas/: ResearchCanvas.tsx
frontend/web/lib/: api.ts
my_deep_research/: deep_research.py  prompts.py
notebooks/: aws_bedrock.ipynb  gradient_sdk.ipynb  jina_reader.ipynb  reasoning_and_toolcalls.ipynb  searxng_search.ipynb
research_workbench/: config.py  deep_research.py  prompts.py
research_workbench/tools/: web_extract.py  web_search.py
src/research_workbench/: config.py  deep_research.py  prompts.py
src/research_workbench/tools/: web_search.py
(+2 files in other folders)
