[project]
name = "research-workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.3",
    "langchain-tavily>=0.2.15",
    "langchain-xai>=1.1.0",
    "langgraph>=1.0.5",
    "langsmith>=0.4.59",
    "loguru>=0.7.3",
    "notebook>=7.5.0",
    "tavily-python>=0.7.15",
]
