[project]
name = "research-workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradient>=3.10.1",
    "langchain>=1.1.3",
    "langchain-aws>=1.1.1",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.15",
    "langchain-xai>=1.1.0",
    "langgraph>=1.0.5",
    "langsmith>=0.4.59",
    "loguru>=0.7.3",
    "notebook>=7.5.0",
    "tavily-python>=0.7.15",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=3.1.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
